# blog-rust

./: .env.dist  .gitignore  Cargo.toml  README.md  post.sh  watch.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
src/: config.rs  main.rs
templates/: base.html  index.html  posts.html
